--- a/src/pug/_layout.pug
+++ b/src/pug/_layout.pug
@@ -4,26 +4,31 @@ block vars
 
 doctype html
 html(lang="en")
-  head
-    meta(charset="utf-8")
-    meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    meta(name="viewport" content="initial-scale=1.0, width=device-width")
-    title #{pageTitle}
-    link(rel="icon" href="img/favicon.ico" type="image/x-icon")
-    meta(name="description", content='Landing page')
+	head
+		meta(charset="utf-8")
+		meta(http-equiv='X-UA-Compatible', content='IE=edge')
+		meta(name="viewport" content="initial-scale=1.0, width=device-width")
+		title Boost Your Sales With Powerful Marketing Materials For Small Business
+		link(rel="icon" href="img/favicon.ico" type="image/x-icon")
+		meta(name="description", content='Boost Your Sales With Powerful Marketing Materials For Small Business')
 
-    link(rel='stylesheet', href='css/libs.min.css')
-    link(rel='stylesheet', href='css/style.min.css')
+		link(rel='stylesheet', href='css/libs.min.css')
+		link(rel='stylesheet', href='css/style.min.css')
 
-  body.page
-    .page__wrapper
-      include modules/_header
+	body.page
+		.page__wrapper
+			include modules/_header
 
-      main.page__content
-        block content
+			main.page__content
+				block content
 
-      include modules/_footer
-    block scripts
-      script(src='js/libs.min.js')
-      script(src='js/main.min.js')
-      script var deadline="March 19 2020 18:00:00 GMT+0200"; initializeClock("countdown", deadline); initializeClock("countdown1", deadline);
+			include modules/_footer
+		block scripts
+			script(src='js/libs.min.js')
+			script(src='js/main.min.js')
+			script
+				| $(document).ready(function(){
+				|   var deadline = new Date(Date.parse(new Date()) + 2 * 24  * 60 * 60 * 1000); // for endless timer
+				|   initializeClock("countdown", deadline);
+				|   initializeClock("countdown1", deadline);
+				| });
