--- a/src/pug/modules/_footer.pug
+++ b/src/pug/modules/_footer.pug
@@ -56,6 +56,212 @@ footer
 	.video__inner
 		.video__close.b-lazy(data-blazy="img/close.svg")
 		.video__content
-			iframe.b-lazy.youtube-video(data-blazy="https://www.youtube.com/embed/P3-lbPpxUEw?enablejsapi=1" width="720" height="480" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+			iframe.youtube-video( width="720" height="480" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+
+
+.popup.powerpoint-presentation
+	.popup__inner
+		.popup__close.b-lazy(data-blazy="img/close.svg")
+		.popup__content
+			.container
+				.popup__title Powerpoint Presentation
+				.popup__gallery
+					.popup__item.popup__item--w50
+						img.b-lazy(alt="img" data-blazy="./img/gallery/powerpoint-presentation01.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w50
+						img.b-lazy(alt="img" data-blazy="./img/gallery/powerpoint-presentation02.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w50
+						img.b-lazy(alt="img" data-blazy="./img/gallery/powerpoint-presentation03.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w50
+						img.b-lazy(alt="img" data-blazy="./img/gallery/powerpoint-presentation04.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w50
+						img.b-lazy(alt="img" data-blazy="./img/gallery/powerpoint-presentation05.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w50
+						img.b-lazy(alt="img" data-blazy="./img/gallery/powerpoint-presentation06.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+
+
+.popup.stationary
+	.popup__inner
+		.popup__close.b-lazy(data-blazy="img/close.svg")
+		.popup__content
+			.container
+				.popup__title Stationary
+				.popup__gallery
+					.popup__item.popup__item--w50
+						img.b-lazy(alt="img" data-blazy="./img/gallery/stationary01.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w50
+						img.b-lazy(alt="img" data-blazy="./img/gallery/stationary02.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w50
+						img.b-lazy(alt="img" data-blazy="./img/gallery/stationary03.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w50
+						img.b-lazy(alt="img" data-blazy="./img/gallery/stationary04.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+
+.popup.business-card
+	.popup__inner
+		.popup__close.b-lazy(data-blazy="img/close.svg")
+		.popup__content
+			.container
+				.popup__title Business Card
+				.popup__gallery
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/business-card01.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/business-card02.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/business-card03.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/business-card04.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/business-card05.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/business-card06.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/business-card07.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/business-card08.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/business-card09.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+
+
+.popup.greeting-cards
+	.popup__inner
+		.popup__close.b-lazy(data-blazy="img/close.svg")
+		.popup__content
+			.container
+				.popup__title Greeting Cards
+				.popup__gallery
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/greeting-cards01.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/greeting-cards02.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/greeting-cards03.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/greeting-cards04.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/greeting-cards05.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/greeting-cards06.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/greeting-cards07.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/greeting-cards08.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/greeting-cards09.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+
+.popup.coupons-discounts
+	.popup__inner
+		.popup__close.b-lazy(data-blazy="img/close.svg")
+		.popup__content
+			.container
+				.popup__title Coupons and Discounts
+				.popup__gallery
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/coupons-and-discounts01.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/coupons-and-discounts02.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/coupons-and-discounts03.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/coupons-and-discounts04.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/coupons-and-discounts05.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/coupons-and-discounts06.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/coupons-and-discounts07.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/coupons-and-discounts08.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/coupons-and-discounts09.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+
+.popup.professional-brochure
+	.popup__inner
+		.popup__close.b-lazy(data-blazy="img/close.svg")
+		.popup__content
+			.container
+				.popup__title Professional Brochure Bifold
+				.popup__gallery
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/professional-brochure-bifold01.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/professional-brochure-bifold02.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/professional-brochure-bifold03.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/professional-brochure-bifold04.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/professional-brochure-bifold05.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/professional-brochure-bifold06.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+				.popup__title Professional Brochure Trifold
+				.popup__gallery
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/professional-brochure-bifold02.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/professional-brochure-bifold03.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/professional-brochure-bifold01.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+
+
+.popup.creative-logo
+	.popup__inner
+		.popup__close.b-lazy(data-blazy="img/close.svg")
+		.popup__content
+			.container
+				.popup__title Creative Logo
+				.popup__gallery
+					.popup__item.popup__item--w25
+						img.b-lazy(alt="img" data-blazy="./img/gallery/creative-logo01.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w25
+						img.b-lazy(alt="img" data-blazy="./img/gallery/creative-logo02.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w25
+						img.b-lazy(alt="img" data-blazy="./img/gallery/creative-logo03.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w25
+						img.b-lazy(alt="img" data-blazy="./img/gallery/creative-logo04.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w25
+						img.b-lazy(alt="img" data-blazy="./img/gallery/creative-logo05.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w25
+						img.b-lazy(alt="img" data-blazy="./img/gallery/creative-logo06.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w25
+						img.b-lazy(alt="img" data-blazy="./img/gallery/creative-logo07.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w25
+						img.b-lazy(alt="img" data-blazy="./img/gallery/creative-logo08.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w25
+						img.b-lazy(alt="img" data-blazy="./img/gallery/creative-logo09.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w25
+						img.b-lazy(alt="img" data-blazy="./img/gallery/creative-logo10.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w25
+						img.b-lazy(alt="img" data-blazy="./img/gallery/creative-logo11.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w25
+						img.b-lazy(alt="img" data-blazy="./img/gallery/creative-logo12.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+
+.popup.flyers
+	.popup__inner
+		.popup__close.b-lazy(data-blazy="img/close.svg")
+		.popup__content
+			.container
+				.popup__title Flyers
+				.popup__gallery
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/flyers01.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/flyers02.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/flyers03.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/flyers04.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/flyers05.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/flyers06.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+				.popup__title Posters
+				.popup__gallery
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/flyers02.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/flyers03.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
+					.popup__item.popup__item--w33
+						img.b-lazy(alt="img" data-blazy="./img/gallery/flyers01.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==")
 
 
