--- a/src/sass/_helper.scss
+++ b/src/sass/_helper.scss
@@ -1,4 +1,4 @@
-.b-lazy {
+img.b-lazy {
   -webkit-transition: opacity 500ms ease-in-out;
   -moz-transition: opacity 500ms ease-in-out;
   -o-transition: opacity 500ms ease-in-out;
@@ -6,6 +6,6 @@
   max-width: 100%;
   opacity: 0;
 }
-.b-lazy.b-loaded {
+img.b-lazy.b-loaded {
   opacity: 1;
 }
