--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -33,7 +33,7 @@ block content
 								b 100+
 								|  variations of styles to cover all <br>your requirements;
 							.first-block__item Countless save time, effort and money.
-				.first-block__video.webp-img
+				.first-block__video
 					.first-block__video-inner
 						.first-block__video-laptop
 							.first-block__video-laptop--man01.b-lazy(data-blazy="./img/man01.svg")
@@ -68,8 +68,9 @@ block content
 								.clock-block__item-txt Seconds
 							.clock-block__deadline-message.deadline-message Time is up!
 
-					.clock-block__btn-wrap
-						a(href="https://www.jvzoo.com/b/89407/335733/99" target="_blank").btn.btn-yellow.clock-block__btn Get with the discount now
+					.clock-block__btn-wrap.btn-pulse
+						a(href="https://www.jvzoo.com/b/89407/335733/99" target="_blank").btn.btn-yellow.clock-block__btn
+							span Get with the discount now
 
 		.section.standart-padding
 			.profit.bg-grey
@@ -384,8 +385,9 @@ block content
 										br
 										| Catch marketing materials design just for
 										span  $29
-									.blue-block__btn-wrap
-										a(href="https://www.jvzoo.com/b/89407/335733/99" target="_blank").btn.btn-yellow.btn-bg-blue.blue-block__btn Grab it now
+									.blue-block__btn-wrap.btn-pulse
+										a(href="https://www.jvzoo.com/b/89407/335733/99" target="_blank").btn.btn-yellow.btn-bg-blue.blue-block__btn
+											span Grab it now
 
 		.section
 			.strok-block.b-lazy(data-blazy="./img/stroke-bg.svg")
@@ -496,8 +498,9 @@ block content
 										br
 										| Catch marketing materials design just for
 										span  $29
-									.blue-block__btn-wrap
-										a(href="https://www.jvzoo.com/b/89407/335733/99" target="_blank").btn.btn-yellow.btn-bg-blue.blue-block__btn Grab it now
+									.blue-block__btn-wrap.btn-pulse
+										a(href="https://www.jvzoo.com/b/89407/335733/99" target="_blank").btn.btn-yellow.btn-bg-blue.blue-block__btn
+											span Grab it now
 
 		.section
 			.strok-block.b-lazy(data-blazy="./img/stroke-bg.svg")
@@ -651,8 +654,9 @@ block content
 										br
 										| Obtain marketing materials design just for
 										span  $29
-									.blue-block__btn-wrap
-										a(href="https://www.jvzoo.com/b/89407/335733/99" target="_blank").btn.btn-yellow.btn-bg-blue.blue-block__btn Obtain it now
+									.blue-block__btn-wrap.btn-pulse
+										a(href="https://www.jvzoo.com/b/89407/335733/99" target="_blank").btn.btn-yellow.btn-bg-blue.blue-block__btn
+											span Obtain it now
 
 		.section
 			.strok-block.b-lazy(data-blazy="./img/stroke-bg.svg")
@@ -747,8 +751,9 @@ block content
 										br
 										| Accept marketing materials design just for
 										span  $29
-									.blue-block__btn-wrap
-										a(href="https://www.jvzoo.com/b/89407/335733/99" target="_blank").btn.btn-yellow.btn-bg-blue.blue-block__btn Accept it now
+									.blue-block__btn-wrap.btn-pulse
+										a(href="https://www.jvzoo.com/b/89407/335733/99" target="_blank").btn.btn-yellow.btn-bg-blue.blue-block__btn
+											span Accept it now
 
 		.section
 			.info-block
@@ -994,7 +999,7 @@ block content
 							| Only 2 days offer!
 							br
 							| Catch marketing materials design just for
-							span  $29Powerpoint Presentation
+							span  $29
 					.clock-block__item.b-lazy(data-blazy="./img/konoha-x2.svg")
 						.clock-block__item-content#countdown1
 							.clock-block__item-column
@@ -1011,5 +1016,6 @@ block content
 								.clock-block__item-txt Seconds
 							.clock-block__deadline-message.deadline-message Time is up!
 
-					.clock-block__btn-wrap
-						a(href="https://www.jvzoo.com/b/89407/335733/99" target="_blank").btn.btn-yellow.btn-bg-blue.clock-block__btn Get with the discount now
+					.clock-block__btn-wrap.btn-pulse
+						a(href="https://www.jvzoo.com/b/89407/335733/99" target="_blank").btn.btn-yellow.btn-bg-blue.clock-block__btn
+							span Get with the discount now
