--- a/src/pug/modules/_footer.pug
+++ b/src/pug/modules/_footer.pug
@@ -47,9 +47,9 @@ footer
 				.footer__bottom-content
 					.footer__bottom-txt Copyright © 2020
 					.footer__bottom-list
-						a(href="#").footer__bottom-link.b-lazy(data-blazy="img/footer-be.svg")
-						a(href="#").footer__bottom-link.b-lazy(data-blazy="img/footer-inst.svg")
-						a(href="#").footer__bottom-link.b-lazy(data-blazy="img/footer-fb.svg")
+						a.footer__bottom-link.b-lazy(data-blazy="img/footer-be.svg" href="#")
+						a.footer__bottom-link.b-lazy(data-blazy="img/footer-inst.svg" href="#")
+						a.footer__bottom-link.b-lazy(data-blazy="img/footer-fb.svg" href="#")
 
 
 .video
