landing 1 + popups full

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -85,7 +85,7 @@ block content
 										span PowerPoint
 										span Business cards
 										span Logo
-									a(href="javascript:void(0);").btn.profit__btn Details
+									a(href="#profit01").btn.profit__btn Details
 								.profit__img
 									img.b-lazy(src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-blazy="./img/wpcig1.svg" alt="profit")
 							.profit__item.profit__item--2
@@ -97,14 +97,14 @@ block content
 										span Flyers and posters
 										span Brochures
 										span Stationary
-									a(href="javascript:void(0);").btn.profit__btn Details
+									a(href="#profit02").btn.profit__btn Details
 							.profit__item.profit__item--3
 								.profit__info
 									.profit__name Get more followers, shares, conversions and drive your sales thanks to:
 									.profit__txt
 										span Social media covers and post
 										span Web banners
-									a(href="javascript:void(0);").btn.profit__btn Details
+									a(href="#profit03").btn.profit__btn Details
 								.profit__img
 									img.b-lazy(src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-blazy="./img/wpcig3.svg" alt="profit")
 							.profit__item.profit__item--4
@@ -116,7 +116,7 @@ block content
 									.profit__txt
 										span Coupons and discounts
 										span Greeting cards
-									a(href="javascript:void(0);").btn.profit__btn Details
+									a(href="#profit04").btn.profit__btn Details
 
 		.section.standart-padding
 			.effort
@@ -239,7 +239,7 @@ block content
 									.marketing__txt
 										span Print or share via web and get more customers, sales, together with profits
 
-		.section
+		.section(id="profit01")
 			.strok-block.b-lazy(data-blazy="./img/stroke-bg.svg")
 				.container
 					.strok-block__inner
@@ -389,7 +389,7 @@ block content
 										a(href="https://www.jvzoo.com/b/89407/335733/99" target="_blank").btn.btn-yellow.btn-bg-blue.blue-block__btn
 											span Grab it now
 
-		.section
+		.section(id="profit03")
 			.strok-block.b-lazy(data-blazy="./img/stroke-bg.svg")
 				.container
 					.strok-block__inner
@@ -446,7 +446,7 @@ block content
 									.info-block__program-img.b-lazy(data-blazy="./img/eps-ico.svg")
 									.info-block__program-img.b-lazy(data-blazy="./img/ps-ico.svg")
 							.info-block__btn-wrap
-								a(href="javascript:void(0);").btn.info-block__btn See all items
+								a(href="javascript:void(0);").btn.info-block__btn.info-block__btn--social-media-covers See all items
 				.info-block__bottom.info-block__bottom--height-bg
 
 		.section
@@ -477,7 +477,7 @@ block content
 									.info-block__program-img.b-lazy(data-blazy="./img/eps-ico.svg")
 									.info-block__program-img.b-lazy(data-blazy="./img/ps-ico.svg")
 							.info-block__btn-wrap
-								a(href="javascript:void(0);").btn.info-block__btn See all items
+								a(href="javascript:void(0);").btn.info-block__btn.info-block__btn--web-banners See all items
 				.info-block__bottom
 					.container
 						.info-block__bottom-txt With fully customizable digital marketing packages for small business, <br>you won't have to worry about creating the right size banner to meet ad <br>platform requirements. Get professional results in a minute! <br>
@@ -502,7 +502,7 @@ block content
 										a(href="https://www.jvzoo.com/b/89407/335733/99" target="_blank").btn.btn-yellow.btn-bg-blue.blue-block__btn
 											span Grab it now
 
-		.section
+		.section(id="profit02")
 			.strok-block.b-lazy(data-blazy="./img/stroke-bg.svg")
 				.container
 					.strok-block__inner
@@ -658,7 +658,7 @@ block content
 										a(href="https://www.jvzoo.com/b/89407/335733/99" target="_blank").btn.btn-yellow.btn-bg-blue.blue-block__btn
 											span Obtain it now
 
-		.section
+		.section(id="profit04")
 			.strok-block.b-lazy(data-blazy="./img/stroke-bg.svg")
 				.container
 					.strok-block__inner
@@ -985,9 +985,9 @@ block content
 						.extended__gifr-item
 							.extended__gifr-item-img.b-lazy(data-blazy="./img/gift.svg")
 							.extended__gifr-item-txt Feel the benefits stationaryof bonus materials and force your target!
-						.extended__gifr-content
-							.extended__gifr-subtitle Partner Commissions
-							.extended__gifr-txt We pay our affiliates a 50% commission for every product sale. We also grant ready-to-use marketing materials to help your promotions: banners, text ads, and newsletters.
+						//.extended__gifr-content
+						//	.extended__gifr-subtitle Partner Commissions
+						//	.extended__gifr-txt We pay our affiliates a 50% commission for every product sale. We also grant ready-to-use marketing materials to help your promotions: banners, text ads, and newsletters.
 
 
 		.section.standart-padding
