--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2435,7 +2435,7 @@ a {
     display: flex;
     flex-wrap: wrap;
     box-sizing: border-box;
-    justify-content: center;
+    //justify-content: center;
     margin: 0 -15px;
   }
 
